# routes/routing.js
@@ -1,13 +1,13 @@
 const expess = require("express");
 const router = expess.Router();
-const apiTaskList = require('../control.js');
+const crudApi = require('../control.js');
 
 const validate = require('../validation');
 
 
-router.route('/').get(apiTaskList.user_list)          
-    .post(validate, apiTaskList.add_user);                          
-router.route('/:id').get(apiTaskList.user_detail)     
-    .put(apiTaskList.update_detail)                         
-    .delete(apiTaskList.delete_user);
+router.get('/users/userList', crudApi.user_list)          
+router.post('/users/addUser',validate, crudApi.add_user);                          
+router.get('/users/userList/:id', crudApi.user_detail)     
+router.put('/users/updateUser/:id', crudApi.update_detail)                         
+router.delete('/users/deleteUser/:id', crudApi.delete_user);
 module.exports = router;
